--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="cards">
         <div class="informacion-card">
         <div class="text">
-            <P>Con mucha felicidad queremos invitarte a nuestra unión ante los ojos de Dios.</P>
+            <P>Con mucha felicidad deseamos que seas parte de nuestra unión.</P>
            <br>
             <p>Sábado, 11 de Marzo a las 20:00hs, en Av del Golf 300, Sierra de la ventana.</p>
             
