--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <div class="text">
             <P>Con mucha felicidad deseamos que seas parte de nuestra fiesta.</P>
            <br>
-            <p>Sábado, 11 de Marzo a las 20:00hs, en Av del Golf 300, Sierra de la ventana.</p>
+            <p>Sábado, 11 de Marzo a las 20:45hs, Jose hernandez 969, sierra de la ventana.</p>
             
            <br>
             <p>Hace click en el botón para llegar</p>
         </div>
-            <a class="boton"target="_blank"  href="https://www.google.com/maps/dir//Restobar+1936,+Av.+del+Golf,+Sierra+de+la+Ventana,+Provincia+de+Buenos+Aires/@-38.1419624,-61.7940365,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95ece934cef8bea3:0x867cef63b633d523!2m2!1d-61.793973!2d-38.1419295">COMO LLEGAR</a>   
+            <a class="boton"target="_blank"  href="https://www.google.com/maps/place/Club+Atletico+Ventana,+Sede+Social/@-38.1225915,-61.7999584,17z/data=!3m1!4b1!4m5!3m4!1s0x95ecef128b6d33a5:0x4afb4eebad6640ef!8m2!3d-38.1225922!4d-61.7999698">COMO LLEGAR</a>   
 
             
         </div>
