--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <br>
             <p>Hace click en el botón para llegar</p>
         </div>
-            <a class="boton"target="_blank"  href="ata=!3m1!4b1!4m5!3m4!1s0x95ecef128b6d33a5:0x4afb4eebad6640ef!8m2!3d-38.1225922!4d-61.7999698">COMO LLEGAR</a>   
+            <a class="boton"target="_blank"  href="https://www.google.com/maps/dir//Club+Atletico+Ventana,+Sede+Social,+Jos%C3%A9+Hern%C3%A1ndez,+Sierra+de+la+Ventana,+Provincia+de+Buenos+Aires/@-38.1225915,-61.7999584,17z/data=!4m16!1m6!3m5!1s0x95ecef128b6d33a5:0x4afb4eebad6640ef!2sClub+Atletico+Ventana,+Sede+Social!8m2!3d-38.1225922!4d-61.7999698!4m8!1m0!1m5!1m1!1s0x95ecef128b6d33a5:0x4afb4eebad6640ef!2m2!1d-61.7999698!2d-38.1225922!3e3">COMO LLEGAR</a>   
 
             
         </div>
